compiler/typ/tests/fixtures/diagnostics/0379_labels_body_branch_mismatch_07.ml
let choose_eta ~flag:(flag : bool) ~x:(x : int) =
  if flag then x else true
